--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
                 <div class="logo-text">Артём</div>
             </a>
             <nav class="nav-menu">
-                <a href="#home" class="nav-link">Главная</a>
                 <a href="#about" class="nav-link">Обо мне</a>
                 <a href="#portfolio" class="nav-link">Портфолио</a>
                 <a href="#contact" class="nav-link">Контакты</a>
@@ -67,9 +66,9 @@
 
             <div class="project-card">
                 <div class="project-image">
-                    <img src="" alt="">
+                    <img src="Коллаж из различных энергоэффективных устройств_ LED-лампа, умный термостат, электромобиль на зарядной станции и другие приборы. Фон можно сделать светлым и минималистичным, чтобы акцен.jpg" alt="">
                     <div class="project-overlay">
-                        <div class="project-category">Посмотреть</div>
+                        <div class="project-category"><a href="#"> Посмотреть </a></div>
                     </div>
                 </div>
                 <div class="project-content">
@@ -84,9 +83,9 @@
 
             <div class="project-card">
                 <div class="project-image">
-                    <img src="" alt="">
+                    <img src="img/image (2).png" alt="">
                     <div class="project-overlay">
-                        <div class="project-category">Посмотреть</div>
+                        <div class="project-category"><a href="https://gangogismagilov-sketch.github.io/BEAAA/">Посмотреть</a></div>
                     </div>
                 </div>
                 <div class="project-content">
@@ -99,9 +98,9 @@
 
             <div class="project-card">
                 <div class="project-image">
-                    <img src="" alt="">
+                    <img src="img/image (6).png" alt="">
                     <div class="project-overlay">
-                        <div class="project-category">Посмотреть</div>
+                        <div class="project-category"><a href="https://gangogismagilov-sketch.github.io/svistok/">Посмотреть</a></div>
                     </div>
                 </div>
                 <div class="project-content">
